tests/golden/type_errors/inferred_let_bool_assignment_mismatch.cd
let b = true;
b = nil;
